--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>R.B.N. Interieur</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width-device-width, initial-scale=1, user=scalable=no"/>
-		<meta name="description" content="Meer dan 30 jaar ervaring in houtbewerking en interieurinrichting. Een persoonlijke benadering, maatwerk en een sterke service." />
+		<meta name="description" content="Meer dan 30 jaar ervaring in houtbewerking en interieurinrichting. Een persoonlijke benadering, maatwerk en een sterke service. Wij doen maatwerk, parket en trappen. Contacteer ons voor meer informatie." />
 		<meta name="keywords" content='RBN, interieurinrichting, interieurwerken, interieur, tremelo, schrijnwerkerij'/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
