--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<meta name="description" content="Meer dan 30 jaar ervaring in houtbewerking en interieurinrichting. Een persoonlijke benadering, maatwerk en een sterke service. Wij doen maatwerk, parket en trappen. Contacteer ons voor meer informatie." />
 		<meta name="keywords" content='RBN, interieurinrichting, interieurwerken, interieur, tremelo, schrijnwerkerij'/>
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -47,7 +50,7 @@
 											<h2>Wie we zijn</h2>
 										</header>
 										<p>
-										In 1984 start Roger heel bescheiden met een schrijnwerkerij in de garage van zijn schoonouders. Met enkele machines levert hij maatwerk aan zijn klanten. 
+										In 1984 start Rogers heel bescheiden met een schrijnwerkerij in de garage van zijn schoonouders. Met enkele machines levert hij maatwerk aan zijn klanten. 
 										Al snel blijkt de garage te klein en verhuist hij naar het Wingepark te Rotselaar waar hij een nieuw atelier bouwt. In 1998 stapt zijn zoon Barry mee in de zaak. 
 										Hij heeft een nieuw atelier in Tremelo en specialiseert zich verder in interieurwerken. 
 										</p>
