--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 											<h2>Wie we zijn</h2>
 										</header>
 										<p>
-										In 1984 start Rogers heel bescheiden met een schrijnwerkerij in de garage van zijn schoonouders. Met enkele machines levert hij maatwerk aan zijn klanten. 
+										In 1984 start Roger heel bescheiden met een schrijnwerkerij in de garage van zijn schoonouders. Met enkele machines levert hij maatwerk aan zijn klanten. 
 										Al snel blijkt de garage te klein en verhuist hij naar het Wingepark te Rotselaar waar hij een nieuw atelier bouwt. In 1998 stapt zijn zoon Barry mee in de zaak. 
 										Hij heeft een nieuw atelier in Tremelo en specialiseert zich verder in interieurwerken. 
 										</p>
