--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										<p>Het parket is verkrijgbaar in massief hout of samengesteld, met verschillende afwerkingen en in verschillende houtsoorten.</p>
 									</li>
 									<li>
-										<span class="image"><img src="images/stairs.jpg" alt="" /></span>
+										<span class="image"><img src="images/img04.jpg" alt="" /></span>
 										<h3>Trappen</h3>
 										<p>We bekleden betonnen trappen en maken houten trappen, zowel modern als klassiek.</p>
 									</li>
