--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<ul>
 							<li><a href="#wwz" class="active">Wie we zijn</a></li>
 							<li><a href="#wwd">Wat we doen</a></li>
-							<li><a href="#showroom">Showroom</a></li>
+							<li><a href="#showroom">Realisaties</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</nav>
