--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 								<dd>info@rbninterieurbouw.be</a></dd>
 							</dl>
 						</section>
-						<p class="copyright">&copy; Bram Somers. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
+						<p class="copyright"><a href="https://lunodesign.be/" target="_blank">Luno design</a> | Copyright 2021</p>
 					</footer>
 
 			</div>
