--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 								<dd>info@rbninterieurbouw.be</a></dd>
 							</dl>
 						</section>
-						<p class="copyright"><a href="https://lunodesign.be/" target="_blank">Luno design</a> | Copyright 2025</p>
+						<p class="copyright"><a href="route89.be" target="_blank">Bram Somers</a> | Copyright 2026</p>
 					</footer>
 
 			</div>
@@ -162,3 +162,4 @@
 
 	</body>
 </html>
+
